--- a/src/components/ui/CircularGallery.css
+++ b/src/components/ui/CircularGallery.css
@@ -1,6 +1,6 @@
 .circular-gallery {
     width: 100%;
-    height: 600px;
+    height: 100%;
     position: relative;
     overflow: hidden;
     cursor: grab;
